fix: add pwa icons and manifest for mobile home screen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   <title>Acorde Gallery | Console Division</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Acorde Gallery">
   <meta name="theme-color" content="#050505">
+
+  <!-- Icons for Mobile & Safari -->
+  <link rel="apple-touch-icon" href="/gallery_icon.png">
+  <link rel="icon" type="image/png" href="/gallery_icon.png">
+  <link rel="manifest" href="/manifest.json">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/index.css">
   <style>
